# dtalk

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.org  aclocal.m4  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
install/share/: dtalkchat.db
install/share/dtalk/: chat.db
src/dtalk-c/: dtalk-c.c  dtalk-c.conf  window.c
src/dtalk-s/: dtalk-s.c
src/dtalk-s-lib/: daemon.c  daemon.h
src/dtalk_c/: Makefile  Makefile.am  Makefile.in  color_print.c  color_print.h  deal_reply.c  deal_reply.h  deal_request.c  deal_request.h  dtalk_c  dtalk_c.c  dtalk_c.conf  dtalk_c.h  dtalk_c_room.c  dtalk_c_room.h
src/dtalk_c/.deps/: dtalk_c-color_print.Po  dtalk_c-deal_reply.Po  dtalk_c-deal_request.Po  dtalk_c-debug.Po  dtalk_c-dtalk_c.Po  dtalk_c-dtalk_c_room.Po  dtalk_c-load_conf.Po  dtalk_c-message.Po  dtalk_c-packet.Po  dtalk_c-utils.Po
src/dtalk_s/: Makefile  Makefile.am  Makefile.in  dtalk_s  dtalk_s.c
src/dtalk_s/.deps/: dtalk_s-daemon.Po  dtalk_s-database.Po  dtalk_s-debug.Po  dtalk_s-dtalk_s.Po  dtalk_s-library.Po  dtalk_s-load_conf.Po  dtalk_s-message.Po  dtalk_s-online_rooms.Po  dtalk_s-online_users.Po  dtalk_s-packet.Po  dtalk_s-sqlite3.Po  dtalk_s-utils.Po
src/dtalk_s_lib/: daemon.c  daemon.h  online_rooms.c  online_rooms.h  online_users.c  online_users.h  room.h  user.h
src/lib/: debug.c  debug.h  library.c  library.h  list.h  load_conf.c  load_conf.h  message.c  message.h  packet.c  packet.h  utils.c  utils.h
src/lib/database/: chat.db  database.c  database.h
src/script/: dtalks
